2010-07-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #10757: Wrong color in the mapping interface 
	* Fixed issue: #14954: No 'Show outline' feature for non-admin users 
	* Fixed issue: #14962: Unlinked elements won't disappear if DragDrop is not enabled 
	* Fixed issue: #14951: [Click to translate FlexForm] harcoded /not translated 

2010-06-24  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.1  - renamed one misspelled variable
	* Fixed issue: #14839: mapping-module should use the common docHeader

2010-06-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13706: can't create pages with a template object based on a static DS

2010-06-16  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #10753: Inconsistency: tab is not supported in the TS editor
	* Fixed issue: #14571: Datastructure: meta > default doesn't work when using static datastructure files (Thanks to Aske Ertmann)

2010-06-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #4512: Would be nice: disallow save without title/name field 
	* Fixed issue: #14386: Static DS - Centralize access to datastructure / pt.1  (Thanks to Michael Klapper)
	* Fixed issue: #14446: disable data preview for section elements 
	* Fixed issue: #3450: Web->Page (TV) shows "fieldname" instead of "title"

2010-06-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13346: HTML Validator to indicate that mapping might not succeed 
	* Fixed bug: #14696: mapping module shows error in workspace 
	* Fixed issue: #5457: Clean XML doesn't save changes when using workspaces 
	* Fixed issue: #14694: FlashMessage should be used instead of individual message formats 
	* Fixed issue: #14579: Documentation states hook that has been removed in 2006 

2010-05-31  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14531: TOs Showing up in in other sites when not in their GRSP on multi-domain installation. 